--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@ h3 {
 .intro {
     color:#fffeec;
     font-size: 20px;
+
 }
 .name {
     display: flex;
@@ -148,16 +149,25 @@ h3 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color:  #4D4D4D;
+    z-index: 2;
 }
 .links {
+    padding: 20px;
     text-align: center;
     width: fit-content;
     display: inline-flex;
     flex-direction: column;
     align-items: stretch;
+    background-color: #4D4D4D;
+    z-index: 2;
     justify-content: center;
     color: black;
     font-size: large;
+    border-radius:  25px;
+    -moz-box-shadow: 0 0 20px 20px #343434;
+    -webkit-box-shadow: 0 0 20px 20px #343434;
+    box-shadow: 0 0 20px 20px#343434;
 }
 .button {
     display: block;
@@ -231,4 +241,9 @@ h3 {
         width:300px;
         padding-bottom:5px;
    }
+}
+
+.shapes 
+{
+    visibility: hidden;
 }
